More formatting. Fixed finbugs issues.